--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -52,9 +52,9 @@
                 <a href="#">Полезная информация</a>
                 <div class="submenu">
                     <ul class="submenu-items">
-                        <li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>
+                        {#<li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>#}
                         <li><a href="{{ path('page',{ 'url' : 'termins' }) }}">Термины</a></li>
-                        <li><a href="{{ path('calculators') }}">Калькуляторы</a></li>
+                        {#<li><a href="{{ path('calculators') }}">Калькуляторы</a></li>#}
                     </ul>
                 </div>
             </li>
