--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -149,6 +149,10 @@ h1.blue-text{
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(80, 135, 91, 0.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(80, 135, 91, 0.6);
 }
+.header{
+    padding-top: 10px;
+    padding-bottom: 18px;
+}
 .header>div{
     height: 100%;
 }
