--- a/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
+++ b/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
@@ -12,7 +12,7 @@
 
 {% block seo %}
     <title>Медицинские сокращения и термины</title>
-    <meta name="description" content="Медицинские сокращения с расшивровкой и термины для врачей на сайте medalmanah.ru"/>
+    <meta name="description" content="Медицинские сокращения с расшивровкой и термины для врачей на сайте agronizer.ru"/>
 {% endblock %}
 
 
