--- a/src/AppBundle/Resources/views/Calculator/indexMassyTela.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/indexMassyTela.html.twig
@@ -2,7 +2,7 @@
 
 {% block seo %}
     <title>Индекс массы тела</title>
-    <meta name="description" content="Вычисление индекса массы тела - Калькулятор для врачей на сайте medalmanah.ru"/>
+    <meta name="description" content="Вычисление индекса массы тела - Калькулятор для врачей на сайте agronizer.ru"/>
 {% endblock %}
 
 {% block content %}
