--- a/src/AppBundle/Resources/views/Calculator/shkalaScore.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/shkalaScore.html.twig
@@ -1,8 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block seo %}
-    <title>Шкала SCORE - Медицинские калькуляторы на сайте medalmanah.ru</title>
-    <meta name="description" content="Шкала SCORE - Вычисление оценки суммарного риска смертельного сердечно-сосудистого заболевания - Калькулятор для врачей на сайте medalmanah.ru"/>
+    <title>Шкала SCORE - Медицинские калькуляторы на сайте agronizer.ru</title>
+    <meta name="description" content="Шкала SCORE - Вычисление оценки суммарного риска смертельного сердечно-сосудистого заболевания - Калькулятор для врачей на сайте agronizer.ru"/>
     <meta name="keywords" content="Шкала SCORE, медицинские калькуляторы, риск сердечно-сосудистого заболевания, оценка риска заболевания">
 {% endblock %}
 
