--- a/src/AppBundle/Resources/views/Default/bannerConcurs.html.twig
+++ b/src/AppBundle/Resources/views/Default/bannerConcurs.html.twig
@@ -15,7 +15,7 @@
                 sec = sec - 1;
                 $('#sec').html(sec);
                 if (sec <= 0){
-                    window.location.href = "http://doctor-konkurs.ru/?utm_source=medalmanah.ru&utm_medium=banner&utm_campaign=banner_ad";
+                    window.location.href = "http://doctor-konkurs.ru/?utm_source=agronizer.ru&utm_medium=banner&utm_campaign=banner_ad";
                 }
             }, 1000);
         })
