--- a/src/AppBundle/Resources/views/Info/standards.html.twig
+++ b/src/AppBundle/Resources/views/Info/standards.html.twig
@@ -12,10 +12,10 @@
 
 {% block seo %}
     {% if standartsCategory is defined %}
-        <title>Медицинские федеральные стандарты на сайте medalmanah.ru</title>
-        <meta name="description" content="Все медицинские федеральные стандарты на сайте medalmanah.ru " />
+        <title>Медицинские федеральные стандарты на сайте agronizer.ru</title>
+        <meta name="description" content="Все медицинские федеральные стандарты на сайте agronizer.ru " />
     {% else %}
-        <title>{{ standart.title | raw }} на сайте medalmanah.ru</title>
+        <title>{{ standart.title | raw }} на сайте agronizer.ru</title>
         <meta name="description" content="{{ standart.title }}" />
     {% endif %}
 {% endblock %}
