--- a/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_html %}
-	<div style="font-family: Arial, Tahoma, sans-serif; background: url('http://medalmanah.ru/bundles/app/images/light_toast.png')" background="http://medalmanah.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
+	<div style="font-family: Arial, Tahoma, sans-serif; background: url('http://agronizer.ru/bundles/app/images/light_toast.png')" background="http://agronizer.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
 		<table style="width: 600px" width="600" cellpadding="0" cellspacing="0">
 			<tr>
 				<td style="background: #f00000; font-size: 10px" colspan="2"><br /></td>
@@ -70,7 +70,7 @@
 			</tr>
 			<tr style="background: #FFF" bgcolor="#FFF">
 				<td style="text-align: center; font-size: 24px; color: #555" colspan="2">
-					С уважением, служба поддержки medalmanah.ru
+					С уважением, служба поддержки agronizer.ru
 				</td>
 			</tr>
 			<tr>
