--- a/src/AppBundle/Resources/views/Publication/event.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.item.html.twig
@@ -5,7 +5,7 @@
             <img src="{{ e.preview.path }}" class="img-thumbnail" title="{{ e.title }}" alt="{{ e.title }}" itemprop="image" >
             <meta itemprop="height" content="150">
             <meta itemprop="width" content="250">
-            <meta itemprop="url" content="https://medalmanah.ru{{ e.preview.path }}">
+            <meta itemprop="url" content="https://agronizer.ru{{ e.preview.path }}">
         </div>
     </div>
     <div class="col-xs-12 col-sm-9">
