--- a/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block seo %}
-    <title>Карта медицинских мероприятий на сайте medalmanah.ru</title>
+    <title>Карта медицинских мероприятий на сайте agronizer.ru</title>
     <meta name="description" content="Медицицнские мероприятия, события, форумы на сайте medalamanh.ru"/>
     <meta name="keywords" content="Карта мероприятий, Медицинские события в моемгороде, Все медицинские события на карте"/>
 {% endblock %}
