--- a/src/AppBundle/Resources/views/Publication/publications.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publications.html.twig
@@ -2,7 +2,7 @@
 
 {% if category is defined and category == 'articles' %}
     {% set categoryTitle = 'Медицинские публикации' %}
-    {% set categoryDesc = 'Научные статьи медицинских изданий на сайте medalmanah.ru' %}
+    {% set categoryDesc = 'Научные статьи медицинских изданий на сайте agronizer.ru' %}
 {% elseif category is defined and  category == 'study' %}
     {% set categoryTitle = 'Клинические случаи' %}
     {% set categoryDesc = 'Клинические случаи заболеваний, описание неожиданных побочных воздействий лекарственных препаратов на сайте Альманах медицинских событий' %}
