--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow"/>
-    <link rel="canonical" href="https://medalmanah.ru{{ app.request.pathInfo }}" />
+    <link rel="canonical" href="https://agronizer.ru{{ app.request.pathInfo }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="ed498bae1f81c4b1" />
 
@@ -29,18 +29,18 @@
           "@context" : "http://schema.org",
           "@type" : "Organization",
           "name" : "Альманах медицинских событий",
-          "url" : "https://medalmanah.ru",
+          "url" : "https://agronizer.ru",
           "sameAs" : [
-            "https://vk.com/medalmanah",
-            "https://www.facebook.com/medalmanah",
-            "https://twitter.com/medalmanah_ru",
+            "https://vk.com/agronizer",
+            "https://www.facebook.com/agronizer",
+            "https://twitter.com/agronizer_ru",
           ]
         }
     </script>
     {% block social %}
         <meta property="og:title" content="Медицинский альманах событий">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://medalmanah.ru">
+        <meta property="og:url" content="https://agronizer.ru">
         <meta property="og:image" content="{{ asset('bundles/app/images/logo5.png') }}">
     {% endblock %}
     {% block stylesheets %}
@@ -162,9 +162,9 @@
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
                         {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
                         
-                        {#<noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>#}
-                        {#<noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>#}
-                            {#<noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>#}
+                        {#<noindex><a href="https://new.vk.com/agronizer" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>#}
+                        {#<noindex><a href="https://twitter.com/agronizer_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>#}
+                            {#<noindex><a href="https://www.facebook.com/agronizer" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>#}
                         <img src="{{ asset('bundles/app/images/social_many.png') }}">
                     </div>
                 </div>
