--- a/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
@@ -2,7 +2,7 @@
 
 {% block seo %}
     <title>Оценка клиренса креатинина (взрослые)</title>
-    <meta name="description" content="Оценка клиренса креатинина (взрослые) - Калькулятор для врачей на сайте medalmanah.ru"/>
+    <meta name="description" content="Оценка клиренса креатинина (взрослые) - Калькулятор для врачей на сайте agronizer.ru"/>
 {% endblock %}
 
 {% block content %}
