--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -80,7 +80,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{ publication.title }}">
     {% if publication.preview.path is defined  %}
-        <meta property="og:image" content="http://medalmanah.ru{{ publication.preview.path }}">
+        <meta property="og:image" content="http://agronizer.ru{{ publication.preview.path }}">
     {% endif %}
     <meta property="og:description" content="{{ publication.anons }}">
 
@@ -88,7 +88,7 @@
     {#<meta itemprop="headline" content="{{ publication.title }}" />#}
 
     {#{% if publication.preview.path is defined  %}#}
-        {#<meta itemprop="image" content="http://medalmanah.ru{{ publication.preview.path }}" />#}
+        {#<meta itemprop="image" content="http://agronizer.ru{{ publication.preview.path }}" />#}
     {#{% endif %}#}
 {% endblock %}
 
@@ -133,7 +133,7 @@
                                 <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
                                 <meta itemprop="height" content="150">
                                 <meta itemprop="width" content="250">
-                                <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
+                                <meta itemprop="url" content="https://agronizer.ru{{ publication.preview.path }}">
                             </div>
                     {% endif %}
                     <div itemprop="description">
@@ -210,10 +210,10 @@
                     <div class="hidden">
                         <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
                             <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-                                <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
-                                <img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
+                                <meta itemprop="url" content="https://agronizer.ru{{ asset('bundles/app/images/logo.png') }}">
+                                <img src="https://agronizer.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
                             </div>
-                            <span itemprop="name">medalmanah.ru</span>
+                            <span itemprop="name">agronizer.ru</span>
                         </div>
                     </div>
                     <div class="col-sm-6">
