--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -20,7 +20,7 @@
                         <img src="{{ publication.preview.path }}" class="img-thumbnail" title="{{ publication.title }}" alt="{{ publication.title }}" itemprop="image" >
                         <meta itemprop="height" content="150">
                         <meta itemprop="width" content="250">
-                        <meta itemprop="url" content="https://medalmanah.ru{{ publication.preview.path }}">
+                        <meta itemprop="url" content="https://agronizer.ru{{ publication.preview.path }}">
                     </div>
                 </a>
             </div>
@@ -63,10 +63,10 @@
         <noindex>Автор: <span itemprop="author">{{ publication.author.name }}</span></noindex>
         <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
             <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
-                <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
-                <img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
+                <meta itemprop="url" content="https://agronizer.ru{{ asset('bundles/app/images/logo.png') }}">
+                <img src="https://agronizer.ru{{ asset('bundles/app/images/logo.png') }}" alt="Альманах медицинских событий">
             </div>
-            <span itemprop="name">medalmanah.ru</span>
+            <span itemprop="name">agronizer.ru</span>
         </div>
     </div>
 </article>
