--- a/src/AppBundle/Resources/views/Publication/publications.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publications.html.twig
@@ -1,19 +1,19 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% if category is defined and category == 'articles' %}
-    {% set categoryTitle = 'Медицинские публикации' %}
-    {% set categoryDesc = 'Научные статьи медицинских изданий на сайте agronizer.ru' %}
+    {% set categoryTitle = 'Новости' %}
+    {% set categoryDesc = 'Научные статьи изданий на сайте agronizer.ru' %}
 {% elseif category is defined and  category == 'study' %}
     {% set categoryTitle = 'Клинические случаи' %}
     {% set categoryDesc = 'Клинические случаи заболеваний, описание неожиданных побочных воздействий лекарственных препаратов на сайте Альманах медицинских событий' %}
 {% elseif category is defined and  category == 'news' %}
-    {% set categoryTitle = 'Новости медицины' %}
-    {% set categoryDesc = 'Последние новости в сфере медицины на сайте Альманах медицинских событий' %}
+    {% set categoryTitle = 'Новости' %}
+    {% set categoryDesc = 'Последние новости' %}
 {% else %}
-    {% set categoryTitle = 'Медицинские публикации' %}
-    {% set categoryDesc = 'Последние новости в сфере медицины на сайте Альманах медицинских событий' %}
+    {% set categoryTitle = 'Новости' %}
+    {% set categoryDesc = 'Последние новости ' %}
 {% endif %}
-{% set categoryKeywords = 'Медицинский альманах, Новости медицины, события, медицинские мероприятия, ФПДО, обучение для врачей, клинические случаи' %}
+{% set categoryKeywords = '' %}
 
 {% block stylesheets %}
     {{ parent() }}
